fixed layout bugs in seat area,modified creating code dynamically with javascript, add fixed width to .seat element

--- a/index.css
+++ b/index.css
@@ -234,7 +234,7 @@ li{
   }
   .seatArea .circle {
         position: relative;
-
+        width: 110px;
   }
  .seatArea .circle .profile{
     width: 100%;
