--- a/media.css
+++ b/media.css
@@ -118,8 +118,3 @@
  }
 
 /*Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) { 
-  img{
-    height: 130px;
-  }
- }
